--- a/4-homepage.html
+++ b/4-homepage.html
@@ -362,10 +362,10 @@
         </section>    
         <!-- Section membership -->
         <section class="section-membership">
-            <div class="container-fluid membership-bg">
+            <div class="container-fluid membership-bg my-3">
                 <div class="d-flex flex-column justify-content-between">
-                    <h1 class="row font-weight-light justify-content-center py-4"><span class="purple-text font-weight-bold mr-2">Free</span> membership</h1>
-                    <div class="row pb-4">
+                    <h1 class="row font-weight-light justify-content-center my-3 py-4"><span class="purple-text font-weight-bold mr-2">Free</span> membership</h1>
+                    <div class="row mb-3 pb-4">
                         <div class="col-lg-3 col-md-6 col-sm-12 text-center">
                             <img class="membership-smile mb-3" src="images/smile_on.png" alt="simle purple" width="45px" height="36px">
                             <p class="font-weight-bold">Lorem ipsum</p>
