--- a/2-pricing.html
+++ b/2-pricing.html
@@ -111,55 +111,46 @@
             </div>
         </section>
         <!-- Carousel Section -->
-        <section class="section-carousel text-white">
-          <div class="carousel-of-quotes container-fluid">
-              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                      <div class="carousel-item active">
-                          <div class="row justify-content-around align-items-center my-5 px-5 ">
-                              <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                  <span class="holberton_school-icon-arrow_4 mr-5 d-block d-sm-none" aria-hidden="true"></span>
-                                  <span class="sr-only">Previous</span>
-                              </a>
-                              <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
-                              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                  <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
-                                  <span class="sr-only">Next</span>
-                              </a> -->
-                              <span class="holberton_school-icon-arrow_4 d-block d-sm-none" aria-hidden="true"></span>
-                                  <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
-                              <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
-                              <div class="col-8">
-                                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                                  <p class="font-weight-bold">Person Name</p>
-                                  <p class="font-italic">weather presenter</p>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="carousel-item">
-                          <div class="row justify-content-around align-items-center my-5 px-5 ">
-                              <span class="holberton_school-icon-arrow_4 d-block d-sm-none" aria-hidden="true"></span>
-                                  <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
-                              <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
-                              <div class="col-8">
-                                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                                  <p class="font-weight-bold">Person Name</p>
-                                  <p class="font-italic">weather presenter</p>
-                              </div>       
-                          </div>
-                      </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="holberton_school-icon-arrow_4 mr-5 d-none d-sm-block" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="holberton_school-icon-arrow_3 d-none d-sm-block" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-              </div>
-          </div>
-      </section>
+        <section class="section-carousel">
+            <div class="carousel-of-quotes container-fluid">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row justify-content-around align-items-center my-5 px-5 ">
+                                <span class="holberton_school-icon-arrow_4 d-block d-sm-none" aria-hidden="true"></span>
+                                    <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
+                                <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
+                                <div class="col-8">
+                                    <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                                    <p class="font-weight-bold">Person Name</p>
+                                    <p class="font-italic">weather presenter</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row justify-content-around align-items-center my-5 px-5 ">
+                                <span class="holberton_school-icon-arrow_4 d-block d-sm-none" aria-hidden="true"></span>
+                                    <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
+                                <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
+                                <div class="col-8">
+                                    <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                                    <p class="font-weight-bold">Person Name</p>
+                                    <p class="font-italic">weather presenter</p>
+                                </div>       
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                      <span class="holberton_school-icon-arrow_4 mr-5 pr-5 d-none d-sm-block" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                      <span class="holberton_school-icon-arrow_3 ml-5 d-none d-sm-block" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
