--- a/courses.html
+++ b/courses.html
@@ -366,21 +366,21 @@
         </section>
     </main>
     <!-- Footer -->
-    <footer class="text-white">
-        <div class="container-fluid footer-bg py-5">
-            <div class="d-flex justify-content-between mt-3">
-                <div class="ml-3">
-                    <img src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
+    <footer>
+        <div class="container-fluid footer-bg py-5 text-white">
+            <div class="row justify-content-around mt-4 mx-5 px-5">
+                <div class="ml-3 mb-4">
+                    <img class="mr-3" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
                     <img src="images/logo.png" alt="smile-school-logo" width="112px" height="auto">
                 </div>
-                <div class="social d-flex mr-3 justify-content-between">
+                <div class="social d-flex ml-4 mr-3 justify-content-between">
                     <span class="holberton_school-icon-ic_facebook" width="30px" height="30px"></span>
                     <span class="holberton_school-icon-ic_twitter"></span>
                     <span class="holberton_school-icon-ic_instagram"></span>
                 </div>
             </div>
-            <div class="row pt-5">
-               <p class="col-sm-6 offset-sm-5 copyright">©smileschool 2020</p>
+            <div class="row justify-content-center pt-5">
+               <p class="col-4 text-center copyright">©smileschool 2020</p>
             </div>
         </div>
     </footer>
