--- a/2-homepage.html
+++ b/2-homepage.html
@@ -155,7 +155,7 @@
                     <span class="font-weight-light"> tutorials</span>
                 </h1>
                 <div id="carouselTutorials" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
+                    <div class="carousel-inner w-75 mx-auto">
                         <div class="carousel-item active">
                             <div class="d-flex">
                                 <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
