--- a/homepage.html
+++ b/homepage.html
@@ -155,7 +155,7 @@
                     <span class="font-weight-light"> tutorials</span>
                 </h1>
                 <div id="carouselTutorials" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
+                    <div class="carousel-inner w-75 mx-auto">
                         <div class="carousel-item active">
                             <div class="d-flex">
                                 <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
@@ -403,7 +403,7 @@
                 <div id="carouselTutorials" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="d-flex">
+                            <div class="row">
                                 <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                                     <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                                         <img src="images/play.png" class="card-img-top" alt="Play button">
@@ -499,7 +499,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="d-flex">
+                            <div class="row">
                                 <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                                     <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                                         <img src="images/play.png" class="card-img-top" alt="Play button">
