--- a/homepage.html
+++ b/homepage.html
@@ -395,15 +395,15 @@
         </section>
         <!-- Videos Section -->
         <section class="section-videos">
-            <div class="tutorials container-fluid my-3">
+            <div class="videos container">
                 <h1 class="row justify-content-center tutorials-h1 my-5">
                     <span class="font-weight-bolder purple-text mr-2">Latest</span>
                     <span class="font-weight-light"> videos</span>
                 </h1>
-                <div id="carouselTutorials" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
+                <div id="carouselVideos" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner w-75 mx-auto">
                         <div class="carousel-item active">
-                            <div class="row">
+                            <div class="d-flex">
                                 <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                                     <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                                         <img src="images/play.png" class="card-img-top" alt="Play button">
@@ -499,7 +499,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="row">
+                            <div class="d-flex">
                                 <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                                     <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                                         <img src="images/play.png" class="card-img-top" alt="Play button">
@@ -595,17 +595,17 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselTutorials" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselVideos" role="button" data-slide="prev">
                         <span class="tutorials-arrow holberton_school-icon-arrow_4 mr-5 pr-5 font-weight-bold" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselTutorials" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselVideos" role="button" data-slide="next">
                         <span class="tutorials-arrow holberton_school-icon-arrow_3 ml-5 font-weight-bold" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
-        </section>
+        </section> 
     </main>
     <!-- Footer -->
     <footer>
